--- a/products.html
+++ b/products.html
@@ -23,6 +23,57 @@
         <a class="py-2 d-none d-md-inline-block" href="cart.html">Mi carrito</a>
       </div>
     </nav>
+    <div class="Productos1">
+      <h1>Productos</h1>
+      <p class="cambio">Aquí verás todos los autos</p>
+    </div>
+        <div class="container">
+            <div class="row">
+                <div class="col text-right">
+                    <div class="btn-group btn-group-toggle mb-4" data-toggle="buttons">
+                        <label class="btn btn-light" id="sortByCount">
+                          <input type="radio" name="options" autocomplete="off"><i class="fas fa-sort-amount-down mr-1"></i>$
+                        </label>
+                        <label class="btn btn-light" id="sortByCount">
+                          <input type="radio" name="options" autocomplete="on"><i class="fas fa-sort-amount-up mr-1"></i>$.
+                        </label>
+                        <label class="btn btn-light" id="sortByCount" >
+                            <input type="radio" name="options" autocomplete="off"><i class="fas 'fas fa-car fa-lg' mr-1"></i>Relevancia.
+                        </label>
+                    </div>
+                </div>
+              </div>
+    <section>
+      <div class="row justify-content-end">
+        <div class="col-md-6"></div>
+        <div class="col-md-6 col-sm-12 mb-1 container">
+          <div class="row container p-0 m-0">
+            <div class="col">
+              <p class="font-weight-normal text-right my-2">Precio</p>
+            </div>
+            <div class="col">
+              <input class="form-control" type="number" placeholder="min." id="rangeFilterCountMin">
+            </div>
+            <div class="col">
+              <input class="form-control" type="number" placeholder="máx." id="rangeFilterCountMax">
+            </div>
+            <div class="col-3 p-0">
+              <div class="btn-group" role="group">
+                <button class="btn btn-light btn-block" id="rangeFilterCount">Filtrar</button>
+                <button class="btn btn-link btn-sm" id="clearRangeFilter">Limpiar</button>
+    </section>        
+    <div class="filtro">
+      <input type="text" placeholder="Filtro..." class="message">
+      <script>
+        let textBox = document.getElementById('message');
+        textBox.addEventListener('keydown', (event) => {
+          console.log(`key=${event.key},code=${event.code}`);
+
+        });
+      </script>
+    </div>
+    <br>
+    <div class="row justify-content-end"></div>
   <div class="container">
     <div class="row">
       <div class="list-group" id="cat-list-container">
