--- a/products.html
+++ b/products.html
@@ -31,10 +31,10 @@
             <div class="row">
                 <div class="col text-right">
                     <div class="btn-group btn-group-toggle mb-4" data-toggle="buttons">
-                        <label class="btn btn-light" id="sortByCount">
+                        <label class="btn btn-light" id="sortAsc">
                           <input type="radio" name="options" autocomplete="off"><i class="fas fa-sort-amount-down mr-1"></i>$
                         </label>
-                        <label class="btn btn-light" id="sortByCount">
+                        <label class="btn btn-light" id="sortDesc">
                           <input type="radio" name="options" autocomplete="on"><i class="fas fa-sort-amount-up mr-1"></i>$.
                         </label>
                         <label class="btn btn-light" id="sortByCount" >
