--- a/JapFase1/index.html
+++ b/JapFase1/index.html
@@ -50,15 +50,13 @@
               <input type="checkbox"  value="Recuérdame" > Recuérdame
            </label> <br>
 
-           <button id="entrar" class="btn btn-lg btn-primary " type="submit" >Ingresar</button> 
+           <button id="entrar" class="btn btn-lg btn-primary " type="submit"  onclick="ingreso()" >Ingresar</button> 
 
            <p class="mt-5 mb-3 text-muted">© 2021</p>
           </div>
          </div>
     </form>
-    <script>
-      sessionStorage.getItem("correo");
-    </script>
+  
   <script src="js/init.js"></script>
   <script src="js/login.js"></script>
 </body>
