--- a/product-info.html
+++ b/product-info.html
@@ -23,6 +23,8 @@
       <a class="py-2 d-none d-md-inline-block" href="products.html">Productos</a>
       <a class="py-2 d-none d-md-inline-block" href="sell.html">Vender</a>
       <a class="py-2 d-none d-md-inline-block" href="cart.html">Mi carrito</a>
+      <a class="py-2 d-none d-md-inline-block" href="my-profile.html" id="entrada"></a>
+      <a href="#" onclick="signOut();">Cerrar Sesion</a>
     </div>
   </nav>
   <div class="container p-5">
@@ -54,6 +56,8 @@
   <script src="js/bootstrap.bundle.min.js"></script>
   <script src="js/init.js"></script>
   <script src="js/product-info.js"></script>
+  <script src="js/login.js"></script>
+  <script src="js/cerrar.js"></script>
 </body>
 
 </html>
