--- a/sell.html
+++ b/sell.html
@@ -37,6 +37,8 @@
             <a class="py-2 d-none d-md-inline-block" href="products.html">Productos</a>
             <a class="py-2 d-none d-md-inline-block" href="sell.html">Vender</a>
             <a class="py-2 d-none d-md-inline-block" href="cart.html">Mi carrito</a>
+            <a class="py-2 d-none d-md-inline-block" href="my-profile.html" id="entrada"></a>
+            <a href="#" onclick="signOut();">Cerrar Sesion</a>
         </div>
     </nav>
       <div class="container">
@@ -212,10 +214,12 @@
         </div>
       </div>
       <div id="spinner-wrapper"><div class="lds-ring"><div></div><div></div><div></div><div></div></div></div>
+      <script src="js/login.js"></script>
       <script src="js/jquery-3.4.1.min.js"></script>
       <script src="js/bootstrap.bundle.min.js"></script>
       <script src="js/dropzone.js"></script>
       <script src="js/init.js"></script>
       <script src="js/sell.js"></script>
+      <script src="js/cerrar.js"></script>
     </body>
 </html>
