--- a/JapFase1/cart.html
+++ b/JapFase1/cart.html
@@ -43,6 +43,7 @@
       <a class="py-2 d-none d-md-inline-block" href="sell.html">Vender</a>
       <a class="py-2 d-none d-md-inline-block" href="cart.html">Mi carrito</a>
       <a class="py-2 d-none d-md-inline-block" href="my-profile.html" id="entrada"></a>
+      <a href="#" onclick="signOut();">Cerrar Sesion</a>
     </div>
   </nav>
   <div class="container p-5">
@@ -67,6 +68,7 @@
   <script src="js/dropzone.js"></script>
   <script src="js/init.js"></script>
   <script src="js/cart.js"></script>
+  <script src="js/cerrar.js"></script>
 </body>
 
 </html>
