--- a/JapFase1/home.html
+++ b/JapFase1/home.html
@@ -22,6 +22,7 @@
         <a class="py-2 d-none d-md-inline-block" href="sell.html">Vender</a>
         <a class="py-2 d-none d-md-inline-block" href="cart.html">Mi carrito</a>
         <a class="py-2 d-none d-md-inline-block" href="my-profile.html" id="entrada"></a>
+        <a href="#" onclick="signOut();">Salir</a>
       </div>
     </nav>
     <main role="main">
@@ -107,5 +108,6 @@
     <script src="js/bootstrap.bundle.min.js"></script>
     <script src="js/init.js"></script>
     <script src="js/login.js"></script>
+    <script src="js/cerrar.js"></script>
   </body>
 </html>
