--- a/JapFase1/index.html
+++ b/JapFase1/index.html
@@ -6,12 +6,17 @@
   <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
   <meta name="description" content="">
+  <meta name="google-signin-client_id" content="1095419665681-v82f0qcqcfksed3ia1qpl45i2r3lj06t.apps.googleusercontent.com" >
   <title>eMercado - Todo lo que busques está aquí</title>
 
   <link rel="canonical" href="https://getbootstrap.com/docs/4.3/examples/album/">
   <link href="https://fonts.googleapis.com/css?family=Raleway:300,300i,400,400i,700,700i,900,900i" rel="stylesheet">
   <!-- Bootstrap core CSS -->
   <link href="css/bootstrap.min.css" rel="stylesheet">
+
+  <!--Biblioteca de Google Platform-->
+  <script src="https://apis.google.com/js/platform.js" async defer></script>
+
   <link href="css/styles.css" rel="stylesheet">
   <style>
     html, body{
@@ -51,6 +56,7 @@
            </label> <br>
 
            <button id="entrar" class="btn btn-lg btn-primary " type="submit"  onclick="ingreso()" >Ingresar</button> 
+          <div class="g-signin2" data-onsuccess="onSignIn"></div>
 
            <p class="mt-5 mb-3 text-muted">© 2021</p>
           </div>
