--- a/JapFase1/product-info.html
+++ b/JapFase1/product-info.html
@@ -24,6 +24,7 @@
       <a class="py-2 d-none d-md-inline-block" href="sell.html">Vender</a>
       <a class="py-2 d-none d-md-inline-block" href="cart.html">Mi carrito</a>
       <a class="py-2 d-none d-md-inline-block" href="my-profile.html" id="entrada"></a>
+      <a href="#" onclick="signOut();">Cerrar Sesion</a>
     </div>
   </nav>
   <div class="container p-5">
@@ -56,6 +57,7 @@
   <script src="js/init.js"></script>
   <script src="js/product-info.js"></script>
   <script src="js/login.js"></script>
+  <script src="js/cerrar.js"></script>
 </body>
 
 </html>
