--- a/JapFase1/sell.html
+++ b/JapFase1/sell.html
@@ -38,6 +38,7 @@
             <a class="py-2 d-none d-md-inline-block" href="sell.html">Vender</a>
             <a class="py-2 d-none d-md-inline-block" href="cart.html">Mi carrito</a>
             <a class="py-2 d-none d-md-inline-block" href="my-profile.html" id="entrada"></a>
+            <a href="#" onclick="signOut();">Cerrar Sesion</a>
         </div>
     </nav>
       <div class="container">
@@ -219,5 +220,6 @@
       <script src="js/dropzone.js"></script>
       <script src="js/init.js"></script>
       <script src="js/sell.js"></script>
+      <script src="js/cerrar.js"></script>
     </body>
 </html>
