--- a/JapFase1/category-info.html
+++ b/JapFase1/category-info.html
@@ -24,7 +24,7 @@
       <a class="py-2 d-none d-md-inline-block" href="sell.html">Vender</a>
       <a class="py-2 d-none d-md-inline-block" href="cart.html">Mi carrito</a>
       <a class="py-2 d-none d-md-inline-block" href="my-profile.html" id="entrada"></a>
-      <a href="#" onclick="signOut();">Cerrar Sesion</a>
+      <a href="#" onclick="signOut();">Cerrar sesión</a>
     </div>
   </nav>
   <main role="main">
