--- a/JapFase1/home.html
+++ b/JapFase1/home.html
@@ -22,7 +22,7 @@
         <a class="py-2 d-none d-md-inline-block" href="sell.html">Vender</a>
         <a class="py-2 d-none d-md-inline-block" href="cart.html">Mi carrito</a>
         <a class="py-2 d-none d-md-inline-block" href="my-profile.html" id="entrada"></a>
-        <a href="#" onclick="signOut();">Salir</a>
+        <a href="#" onclick="signOut();">Cerrar sesión</a>
       </div>
     </nav>
     <main role="main">
