--- a/JapFase1/product-info.html
+++ b/JapFase1/product-info.html
@@ -24,17 +24,53 @@
       <a class="py-2 d-none d-md-inline-block" href="sell.html">Vender</a>
       <a class="py-2 d-none d-md-inline-block" href="cart.html">Mi carrito</a>
       <a class="py-2 d-none d-md-inline-block" href="my-profile.html" id="entrada"></a>
-      <a href="#" onclick="signOut();">Cerrar Sesion</a>
+      <a href="#" onclick="signOut();">Cerrar sesión</a>
     </div>
   </nav>
-  <div class="container p-5">
-    <div class="alert alert-danger" role="alert" style="position: relative; width:auto; top: 0;">
-      <h4 class="alert-heading">¡A trabajar! :)</h4>
-      <p>Esta sección corresponde a: Entrega 3 (Fecha de entrega: 19/09/2021) y Entrega 4 (Fecha de entrega: 03/10/2021).</p>
-      <hr>
-      <p class="mb-0">Para saber qué debes hacer, fijate en la actividad en CREA correspondiente a esta entrega.</p>
+  <main role="main">
+    <div class="container mt-5">
+      <div class="text-center p-4">
+        <h1>Descripción del Producto</h1>
+        <p class="lead">Encontrarás aquí toda la información sobre el vehículo.</p>
+        <p class="small alert-warning py-3"><strong>Nota: </strong>por simplicidad, cualquiera sea la categoría
+          seleccionada previamente, siempre se visualizará la presente: <strong>Autos</strong>.</p>
+      </div>
+      <h3 id="categoryName"></h3>
+      <hr class="my-3">
+      <dl>
+        <dt>Descripción</dt>
+        <dd>
+          <p id="categoryDescription"></p>
+        </dd>
+        <dt>Categorías</dt>
+        <dd>
+          <p id="categoryCate"></p>
+        </dd>
+        <dt>Precio</dt>
+        <dd>
+          <p id="productCount"></p>
+        </dd>
+  
+        <dt>Cantidad de vendidos</dt>
+        <dd>
+          <p id="productCriteria"></p>
+        </dd>
+  
+        <dt>Imágenes ilustrativas</dt>
+        <dd>
+
+          <div class="row text-center text-lg-left pt-2" id="productImagesGallery">
+          </div>
+        </dd>
+      </dl>
+  
     </div>
-  </div>
+    <dt>Productos relacionados</dt>
+    <dd>
+      <p id="relatedtCriteria"></p>
+    </dd>
+    <a type="button" class="btn btn-light btn-lg btn-block" href="products.html">Ver productos</a>
+  </main>
   <footer class="text-muted">
     <div class="container">
       <p class="float-right">
@@ -58,6 +94,7 @@
   <script src="js/product-info.js"></script>
   <script src="js/login.js"></script>
   <script src="js/cerrar.js"></script>
+  <script src="js/product-info.js" ></script>
 </body>
 
 </html>
