--- a/JapFase1/home.html
+++ b/JapFase1/home.html
@@ -12,6 +12,7 @@
     <!-- Bootstrap core CSS -->
     <link href="css/bootstrap.min.css" rel="stylesheet">
     <link href="css/styles.css" rel="stylesheet">
+    <link rel="stylesheet" href="sweetalert2.min.css">
   </head>
   <body>
     <nav class="site-header sticky-top py-1 bg-dark">
@@ -109,5 +110,6 @@
     <script src="js/init.js"></script>
     <script src="js/login.js"></script>
     <script src="js/cerrar.js"></script>
+    <script src="sweetalert2.all.min.js"></script>
   </body>
 </html>
