--- a/JapFase1/index.html
+++ b/JapFase1/index.html
@@ -18,6 +18,7 @@
   <script src="https://apis.google.com/js/platform.js" async defer></script>
 
   <link href="css/styles.css" rel="stylesheet">
+  <link rel="stylesheet" href="sweetalert2.min.css">
   <style>
     html, body{
       height: 100%;
@@ -65,5 +66,6 @@
   
   <script src="js/init.js"></script>
   <script src="js/login.js"></script>
+  <script src="//cdn.jsdelivr.net/npm/sweetalert2@11"></script>
 </body>
 </html>
