--- a/JapFase1/my-profile.html
+++ b/JapFase1/my-profile.html
@@ -47,18 +47,19 @@
       <a href="#" onclick="signOut();">Cerrar sesión</a>
     </div>
   </nav>
+  <section class="jumbotron text-center">
   <div class="container p-5">
     <div class="alert alert-danger" role="alert" style="position: relative; width:auto; top: 0;">
       <h4 class="alert-heading">¡A trabajar! :)</h4>
       <p>Esta sección corresponde a: Entrega 6 (Fecha de entrega: 31/10/2021).</p>
       <hr>
       <div class="card" id="mi-Prefil">
-        <img src="/img/cover_back.png" alt="JAP" style="width:100%">
         <p>Solo probando ...</p>
         <a href="#"><i class="fa fa-twitter"></i></a>
         <a href="#"><i class="fa fa-linkedin"></i></a>
         <a href="#"><i class="fa fa-facebook"></i></a>
         <p><button>Contact</button></p>
+      </div>
       </div>
       <hr>
       <p class="mb-0">Para saber qué debes hacer, fijate en la actividad en CREA correspondiente a esta entrega.</p>
@@ -70,6 +71,7 @@
       <p>Clickea <a target="_blank" href="Letra.pdf">aquí</a> para descargar la letra del obligatorio.</p>
     </div>
   </footer>
+  </section>
   <div class="alert fade alert-success" role="alert" id="alertResult">
     <span id="resultSpan"></span>
     <button type="button" class="close" data-dismiss="alert" aria-label="Close">
