--- a/JapFase1/product-info.html
+++ b/JapFase1/product-info.html
@@ -7,7 +7,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
   <meta name="description" content="">
   <title>eMercado - Todo lo que busques está aquí</title>
-
+  <script src="js/login.js"></script>
   <link rel="canonical" href="https://getbootstrap.com/docs/4.3/examples/album/">
   <link href="https://fonts.googleapis.com/css?family=Raleway:300,300i,400,400i,700,700i,900,900i" rel="stylesheet">
   <link href="css/font-awesome.min.css" rel="stylesheet">
@@ -22,9 +22,16 @@
       <a class="py-2 d-none d-md-inline-block" href="categories.html">Categorías</a>
       <a class="py-2 d-none d-md-inline-block" href="products.html">Productos</a>
       <a class="py-2 d-none d-md-inline-block" href="sell.html">Vender</a>
-      <a class="py-2 d-none d-md-inline-block" href="cart.html">Mi carrito</a>
-      <a class="py-2 d-none d-md-inline-block" href="my-profile.html" id="entrada"></a>
-      <a href="#" onclick="signOut();">Cerrar sesión</a>
+      <!--<a class="py-2 d-none d-md-inline-block" href="cart.html">Mi carrito</a>-->
+      <div class="dropdown">
+      <a  class="btn btn-secondary dropdown-toggle prueba" role="button" id="dropdownMenuLink" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false"
+     class="py-2 d-none d-md-inline-block" href="my-profile.html" id="entrada"></a>
+      <div class="dropdown-menu" aria-labelledby="dropdownMenuLink">
+        <a class="dropdown-item" href="my-profile.html">Mi perfil</a>
+        <a class="dropdown-item" href="cart.html">Mi carrito</a>
+        <a class="dropdown-item" href="#" onclick="signOut();">Cerrar sesión</a>
+      </div>
+      </div>
     </div>
   </nav>
   <main role="main">
@@ -34,43 +41,84 @@
         <p class="lead">Encontrarás aquí toda la información sobre el vehículo.</p>
         <p class="small alert-warning py-3"><strong>Nota: </strong>por simplicidad, cualquiera sea la categoría
           seleccionada previamente, siempre se visualizará la presente: <strong>Autos</strong>.</p>
-      </div>
+        </div>
+
       <h3 id="categoryName"></h3>
       <hr class="my-3">
       <dl>
-        <dt>Descripción</dt>
+        <dt  id="perro">Descripción</dt>
         <dd>
           <p id="categoryDescription"></p>
         </dd>
+        <hr>
+
         <dt>Categorías</dt>
         <dd>
           <p id="categoryCate"></p>
         </dd>
+        <hr>
+
         <dt>Precio</dt>
         <dd>
           <p id="productCount"></p>
         </dd>
-  
+        <hr>
+
         <dt>Cantidad de vendidos</dt>
         <dd>
           <p id="productCriteria"></p>
         </dd>
-  
-        <dt>Imágenes ilustrativas</dt>
-        <dd>
+        <hr>
 
+        <dt id="perro">Imágenes ilustrativas</dt>
+        <dd>
           <div class="row text-center text-lg-left pt-2" id="productImagesGallery">
           </div>
         </dd>
-      </dl>
-  
+      <hr>
+      
+      <dt>Comentarios</dt>
+      <hr>
+      <br>
+      <dd>
+      <div id="datos"></div>
+        </dd>
+
+        <dt>Productos Relacionados</dt>
+        <dd>
+          <p id="relatedtCriteria"></p>
+        </dd>
+        </dl>
     </div>
-    <dt>Productos relacionados</dt>
-    <dd>
-      <p id="relatedtCriteria"></p>
-    </dd>
+     
     <a type="button" class="btn btn-light btn-lg btn-block" href="products.html">Ver productos</a>
   </main>
+    <div>
+    </div>
+    <div id="carouselExampleControls" class="carousel slide" data-ride="carousel">
+      <div class="carousel-inner">
+        <div class="carousel-item active">
+          <img class="d-block w-100" src="img/prod1.jpg" alt="First slide">
+        </div>
+        <div class="carousel-item">
+          <img class="d-block w-100" src="img/prod2.jpg" alt="Second slide">
+        </div>
+        <div class="carousel-item">
+          <img class="d-block w-100" src="img/prod3.jpg" alt="Second slide">
+        </div>
+        <div class="carousel-item">
+          <img class="d-block w-100" src="img/prod4.jpg" alt="Third slide">
+        </div>
+      </div>
+      <a class="carousel-control-prev" href="#carouselExampleControls" role="button" data-slide="prev">
+        <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+        <span class="sr-only">Previous</span>
+      </a>
+      <a class="carousel-control-next" href="#carouselExampleControls" role="button" data-slide="next">
+        <span class="carousel-control-next-icon" aria-hidden="true"></span>
+        <span class="sr-only">Next</span>
+      </a>
+    </div>
   <footer class="text-muted">
     <div class="container">
       <p class="float-right">
@@ -92,7 +140,6 @@
   <script src="js/bootstrap.bundle.min.js"></script>
   <script src="js/init.js"></script>
   <script src="js/product-info.js"></script>
-  <script src="js/login.js"></script>
   <script src="js/cerrar.js"></script>
   <script src="js/product-info.js" ></script>
 </body>
