--- a/JapFase1/index.html
+++ b/JapFase1/index.html
@@ -50,8 +50,8 @@
 
             <h1 class="register">¡Por favor, regístrese!</h1>
             <div class="subSección">
-            <input id="correo" type="email" placeholder="Ingresar email" required autofocus=""><br>
-            <input id="contraseña" type="password"  placeholder="Ingresar contraseña" required> <br>
+            <input id="correo" type="email" placeholder="Ingresar el email" required autofocus=""><br>
+            <input id="contraseña" type="password"  placeholder="Ingresar la contraseña" required> <br>
             <label>
               <input type="checkbox"  value="Recuérdame" > Recuérdame
            </label> <br>
