--- a/JapFase1/products.html
+++ b/JapFase1/products.html
@@ -1,62 +1,84 @@
 <!DOCTYPE html>
 <!-- saved from url=(0049)https://getbootstrap.com/docs/4.3/examples/album/ -->
 <html lang="en">
-  <head>
-    <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <meta name="description" content="">
-    <title>eMercado - Todo lo que busques está aquí</title>
 
-    <link rel="canonical" href="https://getbootstrap.com/docs/4.3/examples/album/">
-    <link href="https://fonts.googleapis.com/css?family=Raleway:300,300i,400,400i,700,700i,900,900i" rel="stylesheet">
-    <link href="css/font-awesome.min.css" rel="stylesheet">
-    <link href="css/bootstrap.min.css" rel="stylesheet">
-    <link href="css/styles.css" rel="stylesheet">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-  </head>
-  <body>
-    <nav class="site-header sticky-top py-1 bg-dark">
-      <div class="container d-flex flex-column flex-md-row justify-content-between">
-        <a class="py-2 d-none d-md-inline-block" href="home.html">Inicio</a>
-        <a class="py-2 d-none d-md-inline-block" href="categories.html">Categorías</a>
-        <a class="py-2 d-none d-md-inline-block" href="products.html">Productos</a>
-        <a class="py-2 d-none d-md-inline-block" href="sell.html">Vender</a>
-        <a class="py-2 d-none d-md-inline-block" href="cart.html">Mi carrito</a>
-        <a class="py-2 d-none d-md-inline-block" href="my-profile.html" id="entrada"></a>
-        <a href="#" onclick="signOut();">Cerrar sesión</a>
-      </div>
-    </nav>
-    <div class="Productos1">
-      <h1>Productos</h1>
-      <p class="cambio">Aquí verás todos los autos disponibles</p>
+<head>
+  <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+  <meta name="description" content="">
+  <title>eMercado - Todo lo que busques está aquí</title>
+
+  <link rel="canonical" href="https://getbootstrap.com/docs/4.3/examples/album/">
+  <link href="https://fonts.googleapis.com/css?family=Raleway:300,300i,400,400i,700,700i,900,900i" rel="stylesheet">
+  <link href="css/font-awesome.min.css" rel="stylesheet">
+  <link href="css/bootstrap.min.css" rel="stylesheet">
+  <link href="css/styles.css" rel="stylesheet">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+</head>
+
+<body>
+  <nav class="site-header sticky-top py-1 bg-dark">
+    <div id="fb-root"></div>
+    <script async defer crossorigin="anonymous" src="https://connect.facebook.net/es_ES/sdk.js#xfbml=1&version=v12.0"
+      nonce="8wEHU41i"></script>
+    <div class="dropdown-menu" aria-labelledby="dropdownMenuLink">
+      <a class="dropdown-item" href="my-profile.html">Mi perfil</a>
+      <a class="dropdown-item" href="cart.html">Mi carrito</a>
+      <a class="dropdown-item" href="#" onclick="signOut();">Cerrar sesión</a>
     </div>
-        <div class="container">
-            <div class="row">
-                <div class="col text-right">
-                    <div class="btn-group btn-group-toggle mb-4" data-toggle="buttons">
-                        <label class="btn btn-light" id="sortAsc">
-                          <input type="radio" name="options" autocomplete="off"><i class="fas fa-sort-amount-down-alt mr-1"></i><i class='fas fa-dollar-sign'></i>
-                        </label>
-                        <label class="btn btn-light" id="sortDesc">
-                          <input type="radio" name="options" autocomplete="on"><i class="fas fa-sort-amount-down mr-1"></i> <i class='fas fa-dollar-sign'></i>
-                        </label>
-                        <label class="btn btn-light" id="sortByCount" >
-                            <input type="radio" name="options" autocomplete="off"><i class="fas 'fas fa-car fa-lg' mr-1"></i>Relevancia.
-                        </label>
-                    </div>
-                </div>
-              </div>
+    <div class="container d-flex flex-column flex-md-row justify-content-between">
+      <a class="py-2 d-none d-md-inline-block" href=" "></a>
+      <a class="py-2 d-none d-md-inline-block" href="home.html">Inicio</a>
+      <a class="py-2 d-none d-md-inline-block" href="categories.html">Categorías</a>
+      <a class="py-2 d-none d-md-inline-block" href="products.html">Productos</a>
+      <a class="py-2 d-none d-md-inline-block" href="sell.html">Vender</a>
+
+      <div class="dropdown">
+        <a class="btn btn-secondary dropdown-toggle prueba" role="button" id="entrada" data-toggle="dropdown"
+          aria-haspopup="true" aria-expanded="false" class="py-2 d-none d-md-inline-block" href="my-profile.html"
+          id="entrada"></a>
+        <div class="dropdown-menu" aria-labelledby="dropdownMenuLink">
+          <a class="dropdown-item" href="my-profile.html">Mi perfil <i class="fas fa-street-view"></i></a>
+          <a class="dropdown-item" href="cart.html">Mi carrito<i class="fa fa-shopping-cart" aria-hidden="true"></i></a>
+          <a class="dropdown-item" href="#" onclick="signOut();">Cerrar sesión <i class="fas fa-sign-out-alt"></i></a>
+        </div>
+      </div>
+    </div>
+    </div>
+  </nav>
+  <div class="Productos1">
+    <h1>Productos</h1>
+    <p class="cambio">Aquí verás todos los autos disponibles</p>
+  </div>
+  <div class="container">
+    <div class="row">
+      <div class="col text-right">
+        <div class="btn-group btn-group-toggle mb-4" data-toggle="buttons">
+          <label class="btn btn-light" id="sortAsc">
+            <input type="radio" name="options" autocomplete="off"><i class="fas fa-sort-amount-down-alt mr-1"></i><i
+              class='fas fa-dollar-sign'></i>
+          </label>
+          <label class="btn btn-light" id="sortDesc">
+            <input type="radio" name="options" autocomplete="on"><i class="fas fa-sort-amount-down mr-1"></i> <i
+              class='fas fa-dollar-sign'></i>
+          </label>
+          <label class="btn btn-light" id="sortByCount">
+            <input type="radio" name="options" autocomplete="off"><i class="fas 'fas fa-car fa-lg' mr-1"></i>Relevancia.
+          </label>
+        </div>
+      </div>
+    </div>
     <section>
       <div class="row justify-content-end">
-             <div class="col-md-6"></div>
-                <div class="col-md-6 col-sm-12 mb-1 container">
-                <div class="row container p-0 m-0">
-                <div class="col">
-                    <p class="font-weight-normal text-right my-2">Precio</p>
-               </div>
-                <div class="col">
-                   <input class="form-control" type="number" placeholder="min." id="rangeFilterCountMin">
-                </div>
+        <div class="col-md-6"></div>
+        <div class="col-md-6 col-sm-12 mb-1 container">
+          <div class="row container p-0 m-0">
+            <div class="col">
+              <p class="font-weight-normal text-right my-2">Precio</p>
+            </div>
+            <div class="col">
+              <input class="form-control" type="number" placeholder="min." id="rangeFilterCountMin">
+            </div>
             <div class="col">
               <input class="form-control" type="number" placeholder="máx." id="rangeFilterCountMax">
             </div>
@@ -64,32 +86,43 @@
               <div class="btn-group" role="group">
                 <button class="btn btn-light btn-block" id="rangeFilterCount">Filtrar</button>
                 <button class="btn btn-link btn-sm" id="clearRangeFilter">Limpiar</button>
-    </section>        
+    </section>
     <div class="filtro">
       <input type="text" placeholder="It does not work..." class="message">
     </div>
     <br>
     <div class="row justify-content-end"></div>
-  <div class="container">
-    <div class="row">
-      <div class="list-group" id="cat-list-container">
+    <div class="container">
+      <div class="row">
+        <div class="list-group" id="cat-list-container">
+        </div>
       </div>
-    </div>
-    <footer class="text-muted bg-light">
-      <div class="container">
-        <p class="float-right">
-          <a href="#">Volver arriba</a>
-        </p>
-        <p>Este sitio forma parte de Desarrollo Web - JAP - 2020</p>
-        <p>Clickea <a target="_blank" href="Letra.pdf">aquí</a> para descargar la letra del obligatorio.</p>
+      <footer class="text-muted bg-light">
+        <div class="container">
+          <p class="float-right">
+            <a href="#">Volver arriba</a>
+          </p>
+          <p>Este sitio forma parte de Desarrollo Web - JAP - 2020</p>
+          <p>Clickea <a target="_blank" href="Letra.pdf">aquí</a> para descargar la letra del obligatorio.</p>
+          <div class="fb-comments" data-href="https://github.com/AlvaroDiploide/proyecto-E-M" data-width="800"
+            data-numposts="6">
+          </div>
+        </div>
+      </footer>
+      <div id="spinner-wrapper">
+        <div class="lds-ring">
+          <div></div>
+          <div></div>
+          <div></div>
+          <div></div>
+        </div>
       </div>
-    </footer>
-    <div id="spinner-wrapper"><div class="lds-ring"><div></div><div></div><div></div><div></div></div></div>
-    <script src="js/jquery-3.4.1.min.js"></script>
-    <script src="js/bootstrap.bundle.min.js"></script>
-    <script src="js/init.js"></script>
-    <script src="js/products.js"></script>
-    <script src="js/login.js"></script>
-    <script src="js/cerrar.js"></script>
-  </body>
+      <script src="js/jquery-3.4.1.min.js"></script>
+      <script src="js/bootstrap.bundle.min.js"></script>
+      <script src="js/init.js"></script>
+      <script src="js/products.js"></script>
+      <script src="js/login.js"></script>
+      <script src="js/cerrar.js"></script>
+</body>
+
 </html>
